# an3_sem2

./: .gitmodules  README.md
ip/: README.md
ip/Lab2/: .gitignore  Form1.Designer.cs  Form1.cs  IEquation.cs  PolyEquation.cs  PolyException.cs  Program.cs  TrigEquation.cs  TrigException.cs
lft/: README.md
lft/lab1/: output.py  pseudocode.txt  translater.py
pw/: README.md  despre_html.html  persoane.xml  persoane.xsd
sd/: README.md  cursuri.db  studenti.db
sd/lab1-aplicatie-simpla/: .gitignore  pom.xml
sd/lab2-aplicatie-complicata/: README.md  pom.xml
sd/lab2-aplicatie-complicata/ear/: pom.xml
sd/lab2-aplicatie-complicata/ejbs/: pom.xml
sd/lab2-aplicatie-complicata/primary-source/: pom.xml
sd/lab2-aplicatie-complicata/projects/: pom.xml
sd/lab2-aplicatie-complicata/servlets/: pom.xml
sd/lab2-client/src/: JeeClient.java
sd/lab3-springBoot/: pom.xml
sd/lab3-weatherAppSpringBoot/: README.md  pom.xml
sd/lab4-flask/: app.py
sd/lab4-paymentFlask/: app.py
sd/lab4-paymentREST/: pom.xml
sd/lab4-restful/: pom.xml
sd/lab5-libraryApp/: pom.xml
sd/lab5-libraryAppInterface/: add_book_interface.ui  async_consumer.py  exemplul_2.ui  interface.py  mq_communication.py
sd/lab5-rabbitmqInterface/: interface.py  mq_communication.py  requirements.txt
sd/lab5-rabbitmqStackApp/: pom.xml
spg/: README.md
spg/lab1/p1/: CMakeCache.txt  CMakeLists.txt  lab1.h  main.cpp
spg/lab1/p2/: CMakeLists.txt  lab2.h  main.cpp
spg/lab2/: .gitignore  lab2.h  lab2.sln  main.cpp
spg/lab4/: main.cpp  spheremesh.h
spg/opengl/: opengl.cpp  opengl.h
(+96 files in other folders)
